--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mysql2": "^3.10.3"
+    "express-validator": "^7.1.0",
+    "mysql2": "^3.10.3",
+    "passport": "^0.7.0"
   }
 }
